--- a/src/style.scss
+++ b/src/style.scss
@@ -10,16 +10,20 @@ $color-link-hover: #3b79ba;
 $color-footer-background: #f1f1f1;
 
 // Body and HTML defaults
-body, html {
+html, body {
   margin: 0;
   padding: 0;
   font-family: $font-family-default;
 }
 
+// Make sure these fill the viewport height to avoid the pdf iframe from shrinking on Chrome
+html, body, #main, .content {
+  height: 100%;
+}
+
 #main {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; // Make sure it fills the viewport height
 
   .content {
     flex: 1; // This allows the content to grow and fill available space
@@ -30,7 +34,9 @@ body, html {
 
   .pdf-container {
     flex: 1; // Grow to fill available space within its parent (.content)
+    display: flex;
     iframe {
+      flex: 1;
       width: 100%;
       height: 100%; // Make iframe fill its container's height
     }
@@ -38,7 +44,6 @@ body, html {
 
   footer {
     text-align: center;
-    padding: 20px;
     width: 100%;
     background-color: $color-footer-background;
   }
